src/objects/loan_ffa__Dimension_Settings_for_FFA__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan_ffa__Stamp_Dimensions_On_Bank_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when dimensions are to be stamped on Bank line</inlineHelpText>
        <label>Stamp Dimensions On Bank Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Stamp_Dimensions_On_Ledger_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when dimensions are to be stamped on the Ledger Line Item</inlineHelpText>
        <label>Stamp Dimensions On Ledger Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_DishonorFeeBatchJob__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Journals with Dimensions are to be created for Dishonour Fee.</inlineHelpText>
        <label>Use Dimensions for DishonorFeeBatchJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_DishonorFeeReversal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Dimensions for DishonorFeeReversal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_LateFeeBatchJob__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Journals with Dimensions are to be created for Late Fee.</inlineHelpText>
        <label>Use Dimensions for LateFeeBatchJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_LateFeeReversalJob__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when dimensions are to be stamped on Late fee reversal Journal.</inlineHelpText>
        <label>Use Dimensions for LateFeeReversalJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_OrigFeeReversalBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked when the Origination Fee Reversal Journal is to be created with Dimensions</inlineHelpText>
        <label>Use Dimensions for OrigFeeReversalBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_OriginationFeeBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Journals with Dimensions are to be created for Origination Fee.</inlineHelpText>
        <label>Use Dimensions for OriginationFeeBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_ServiceFeeBatchJob__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check when Journals with Dimensions are to be created for Service Fee.</inlineHelpText>
        <label>Use Dimensions for ServiceFeeBatchJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Use_Dimensions_for_ServiceFeeReversalJob__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if Dimensions are to be stamped on Service Fee Reversal Journal</inlineHelpText>
        <label>Use Dimensions for ServiceFeeReversalJob</label>
        <type>Checkbox</type>
    </fields>
    <label>Dimension Settings for FFA</label>
</CustomObject>